# Student-Database

./: .gitignore  CMakeLists.txt  README.md  SignUpState.hpp  main.cpp  meson.build  schedule  sign_state.cpp
include/: Button.hpp  Entity.hpp  LogInState.hpp  MajorSelect.hpp  Math.hpp  MenuState.hpp  RenderWindow.hpp  SignUpState.hpp  States.hpp  Text.hpp  Utils.hpp  Wallpaper.hpp
libs/SDL/include/: SDL_main.h
res/: courses.json  schedule.json  students.json
resources/: courses.json  names.txt
src/: button.cpp  entity.cpp  login_state.cpp  main.cpp  major_select.cpp  math.cpp  menu_state.cpp  meson.build  render_window.cpp  signup_state.cpp  states.cpp  text.cpp  wallpaper.cpp
